--- a/style.css
+++ b/style.css
@@ -2,16 +2,11 @@
     body {
         margin: 0px 0px;
         margin-top: 0px;
+        background-color: gray
     }
     
-    body {
-        height: 1000px;
-        background-color: darkgrey;
-        background-image: linear-gradient(darkgray, gray);
-    }
-    
-    div {
-        display: block;
+    html {
+        font-family: sans-serif;
     }
     
     .botaum {
@@ -24,8 +19,7 @@
     .botaum1 {
         background-color: cadetblue;
         border: cadetblue solid 1px;
-        border-spacing: 50px;
-        border-radius: 5px;
+        border-radius: 10px;
         color: white;
         white-space: normal;
         padding: 30px 10px 20px;
@@ -38,39 +32,6 @@
         border: rgb(47, 87, 88) solid 1px;
         transition-duration: 0.7s;
     }
-    /*.btn-grupo .botaotop {
-        background-color: cadetblue;
-        color: white;
-        padding: 10px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        cursor: pointer;
-        float: left;
-        position: fixed;
-    }
-    
-    .btn-grupo .botaotop:not(:last-child) {
-        border-right: none;
-    }
-    
-    .btn-grupo .botaotop:hover {
-        background-color: aqua;
-    }
-    /*.topo {
-        background-color: grey;
-        overflow: hidden;
-        position: fixed;
-        width: 100%;
-        height: 40px;
-        color: honeydew;
-        font-size: 40px;
-        text-align: center;
-        float: left;
-        padding: 0px;
-        display: block;
-    }*/
     
     .centro {
         text-align: center;
@@ -82,7 +43,7 @@
         margin-top: 100px;
         letter-spacing: -2px;
         line-height: 0, 9;
-        text-shadow: 1px 1px black;
+        text-shadow: 2px 2px black;
     }
     
     h2.titulo {
@@ -95,16 +56,13 @@
     #image_background {
         background: url(img/clima1.jpg);
         background-size: cover;
-        height: 520px;
-        padding: 65px;
+        padding: 115px;
     }
     
-    .divimg {
-        margin: 200px 300px;
-    }
-    
-    .divtext {
-        margin: 200px 200px;
+    div {
+        margin: 0px;
+        padding: 0px;
+        display: block;
     }
     
     .row:after {
@@ -118,9 +76,11 @@
         width: 32.33%;
         padding: 6.5px;
         text-align: center;
+    }
+    
+    .c1 {
         background-color: #ccc;
         background-size: cover;
-        height: 300px;
     }
     
     @media screen and (max-width:600px) {
@@ -132,4 +92,12 @@
     .whohelp {
         background-color: #aaa;
         height: 500px;
+        margin: 0px;
+    }
+    
+    #rodape {
+        background-color: rgb(53, 53, 53);
+        color: white;
+        text-align: center;
+        height: 50px;
     }
